[package]
name    = "eom"
version = "0.11.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description   = "Configurable ODE/PDE solver"
documentation = "https://docs.rs/eom/"
repository    = "https://github.com/termoshtt/eom"
keywords      = ["ndarray", "ode", "pde"]
categories    = ["algorithms", "science"]
license       = "MIT"
readme        = "README.md"

[features]
default   = []
oss       = ["ndarray-linalg/openblas-static", "fftw/source"]
intel-mkl = ["ndarray-linalg/intel-mkl-static", "fftw/intel-mkl"]

[dependencies]
num-traits  = { version = "0.2.19", default-features = false }
num-complex = { version = "0.4.6", default-features = false }
derive-new  = { version = "0.7.0", default-features = false }
ndarray     = { version = "0.16.1", default-features = false }
fftw        = { version = "0.8.0", default-features = false }

katexit = "0.1.4"

[dependencies.ndarray-linalg]
git = "https://github.com/Lugendre/ndarray-linalg.git"
default-features = false

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "ode"
harness = false

[profile.release]
debug = true
